<resources>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="air_pc_extension">%1$s、%2$s</string>
    <string name="allow_call_tip">Allow Phone Call Notifications</string>
    <string name="allow_sms_tip">Allow SMS Notifications</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">oneid_sdk</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bkp_backup_interrupt_desc">During the backup process, please keep the device connected normally, do not use personal hotspot, and keep Wi-Fi turned on. Check the device status and try again.</string>
    <string name="bkp_backup_interrupt_sure">The AI Gallery backup of the device \"%1$s\" is not completed. Disconnect the device?</string>
    <string name="bkp_backuping">Backup in progress… (%1$s / %2$s)</string>
    <string name="bkp_cancel">Cancel</string>
    <string name="bkp_gallery_backup">AI Gallery Backup</string>
    <string name="bkp_gallery_backup_cancel">AI Gallery backup canceled</string>
    <string name="bkp_gallery_backup_fail">AI Gallery backup failed</string>
    <string name="bkp_gallery_backup_finish">AI Gallery backup ended</string>
    <string name="bkp_gallery_backup_interrupt">AI Gallery backup interrupted</string>
    <string name="bkp_gallery_backup_success">AI Gallery backup successful</string>
    <string name="bkp_interrupt_connection">Disconnect</string>
    <string name="bkp_sure">OK</string>
    <string name="bkp_tip">Note</string>
    <string name="blank" />
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="call_audio_output_bluetooth">Bluetooth</string>
    <string name="call_audio_output_earpiece">Earpiece</string>
    <string name="call_audio_output_speaker">Speaker</string>
    <string name="call_audio_output_wire">Wire</string>
    <string name="call_from">From %1$s phone</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="capability_not_support_dialog_cancel">Cancel</string>
    <string name="capability_not_support_dialog_desc">The %2$s feature cannot be used properly. Please visit %3$s (copy and paste) on your PC to download the latest version of the %1$s client.</string>
    <string name="capability_not_support_dialog_ok">Copy Link</string>
    <string name="capability_not_support_dialog_title">%1$s version outdated</string>
    <string name="cast_phone_video_detailed_viewing">Cast mobile videos to your computer, and don\'t miss every detail.</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="connect_fail_desc">Select %1$s on your PC to bring up the QR code.</string>
    <string name="connect_fail_qr_scan">Scan QR Code</string>
    <string name="connect_tip">Notify once Connected</string>
    <string name="connect_tips">Please turn on the Wi-Fi and Bluetooth of the PC you want to connect to, and open the PC client. You can visit %1$s to download the client.</string>
    <string name="connect_tips_infinix">Turn on Wi-Fi and Bluetooth on the PC. After connection, you can easily cast your phone screen or transfer files. For Infinix PCs, Infinix PC Connection is pre-installed with a shortcut on the desktop. For PCs of other brands, visit %1$s to easily download the PC client.</string>
    <string name="connect_tips_tecno">Turn on Wi-Fi and Bluetooth on the PC. After connection, you can easily cast your phone screen or transfer files. For TECNO PCs, PC Manager or OneLeap is pre-installed with a shortcut on the desktop. For PCs of other brands, visit %1$s to easily download the PC client.</string>
    <string name="connection_failed_try_cable">Connection failed. Please retry with a USB cable.</string>
    <string name="connection_preparation">Preparation before Connection</string>
    <string name="data_cable_connection">Connect with Data Cable</string>
    <string name="data_cable_connection_steps">1. Use a standard data cable to connect the mobile device and PC.\n2. Select %1$s in the pop-up window.</string>
    <string name="dec">Dec</string>
    <string name="device_connect">Device Connection</string>
    <string name="dialog_cast_transfer">Cast &amp; Transfer</string>
    <string name="dialog_connect_fail_confirm">Got It</string>
    <string name="disconnect_dialog_ble_off">蓝牙已关闭，已终止“%1$s”功能。</string>
    <string name="disconnect_dialog_hot_spot_on">个人热点已开启，已终止“%1$s”功能。</string>
    <string name="disconnect_dialog_title">提示</string>
    <string name="disconnect_dialog_wifi_off">Wi-Fi已关闭，已终止“%1$s”功能。</string>
    <string name="download_latest_client">To get the latest client, you can visit %2$s on your PC.</string>
    <string name="easy_multiwindow_operation">Effortless Multi-Window Control, No Need to Pick up the Phone</string>
    <string name="md_allow_find">Reachable Devices</string>
    <string name="md_allow_find2">Select the devices that can find this device.</string>
    <string name="md_connect_device_title">Connect to Devices</string>
    <string name="md_connected_deivice">Connected Devices</string>
    <string name="md_finger_copy">Three-finger Copy</string>
    <string name="md_function">Interconnection Features</string>
    <string name="md_mirror_and_gesture">Mirroring &amp; Transfer Gestures</string>
    <string name="md_multi_connect">Multi-Screen Connection</string>
    <string name="md_paste_from_other_device">Cross-device Copy and Paste</string>
    <string name="md_share_call">Share Incoming Calls</string>
    <string name="md_share_call_tip">You can answer incoming phone calls and talk on your tablet.</string>
    <string name="md_share_network">Network Sharing</string>
    <string name="md_share_noti">Notification Sharing</string>
    <string name="md_share_sms">Share SMS</string>
    <string name="md_share_sms_tip">You can view and reply to text messages from your phone on your tablet.</string>
    <string name="md_transfer_tip">Copy and paste text, images, and more across devices.</string>
    <string name="md_transfer_tip5">Receive, view, and manage phone notifications directly on your PC or tablet for seamless cross-device alerts.</string>
    <string name="md_transfer_tip6">Allow connected devices to use this device\'s mobile data network.</string>
    <string name="md_transfer_tip7">Quickly trigger screen mirroring, cross-device copying, file transfer, and more using gesture controls.</string>
    <string name="md_trust_device2">Trusted Devices</string>
    <string name="md_trust_subtitle">No need to ask again when connecting this device.</string>
    <string name="module_pc_free_stream">Data-free</string>
    <string name="module_pc_gesture_switch_title">PC Mirroring Gesture</string>
    <string name="module_pc_phone_mirroe">Phone Screen Mirroring</string>
    <string name="module_pc_you_can_also_play">Once connected, you can use Screen Mirroring.</string>
    <string name="module_pc_you_can_transfer">You can transfer files between your PC and your phone without using mobile data.</string>
    <string name="os_back"></string>
    <string name="three_finger_fast_transfer">Three-finger Quick Share</string>
</resources>