<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:tag="layout/activity_pc_connect_setting_0"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.transsion.widgetslib.view.damping.DampingLayout
        android:id="@+id/damping_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="false"
        app:os_damping_mode="normal">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="@dimen/os_list_item_padding"
            android:paddingEnd="@dimen/os_list_item_padding">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dialog_default_height">
                <androidx.viewpager2.widget.ViewPager2
                    android:orientation="horizontal"
                    android:id="@+id/vp_lottie"
                    android:tag="binding_1"
                    android:layout_width="match_parent"
                    android:layout_height="280dp"/>
                <TextView
                    android:textSize="14sp"
                    android:textColor="@color/module_pc_primary_content_40"
                    android:gravity="center"
                    android:id="@+id/tv_fixed_desc"
                    android:tag="binding_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_below="@+id/vp_lottie"
                    android:lineSpacingMultiplier="1.2"
                    android:layout_marginStart="@dimen/os_list_item_padding"
                    android:layout_marginEnd="@dimen/os_list_item_padding"/>
                <com.transsion.widgetslib.view.indicator.PageIndicatorWrapper
                    android:gravity="center"
                    android:id="@+id/indicator"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_below="@+id/tv_fixed_desc"/>
            </RelativeLayout>
            <com.transsion.widgetslistitemlayout.OSListItemView
                android:id="@+id/item_allow_find"
                android:tag="binding_3"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/os_dimen_search_back_view_padding_end"
                app:lil_corners_angle_type="round"
                app:lil_right_layout_type="image"
                app:lil_subtitle="@string/md_allow_find2"
                app:lil_title="@string/md_allow_find"/>
            <TextView
                android:textSize="14sp"
                android:textColor="@color/module_pc_primary_content_40"
                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/os_dimen_search_back_view_padding_end"
                android:layout_marginBottom="5dp"
                android:text="@string/md_connected_deivice"
                android:layout_marginStart="10dp"/>
            <com.transsion.widgetslistitemlayout.OSListItemView
                android:id="@+id/device_connect_item"
                android:tag="binding_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:lil_corners_angle_type="top_corners_round"
                app:lil_open_new_page="false"
                app:lil_right_image="other"
                app:lil_right_layout_type="image"
                app:lil_show_bottom_divider="true"/>
            <com.transsion.widgetslistitemlayout.OSListItemView
                android:id="@+id/device_connect_button"
                android:tag="binding_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:lil_open_new_page="false"
                app:lil_right_layout_type="nothing"
                app:lil_title="@string/md_connect_device_title"/>
            <LinearLayout
                android:orientation="vertical"
                android:id="@+id/phone_settings_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">
                <TextView
                    android:textSize="14sp"
                    android:textColor="@color/module_pc_primary_content_40"
                    android:padding="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/md_function"
                    android:layout_marginStart="10dp"/>
                <com.transsion.widgetslistitemlayout.OSListItemView
                    android:id="@+id/item_copy_paste"
                    android:tag="binding_6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:lil_corners_angle_type="top_corners_round"
                    app:lil_open_new_page="false"
                    app:lil_right_layout_type="image"
                    app:lil_show_bottom_divider="true"
                    app:lil_subtitle="@string/md_transfer_tip"
                    app:lil_title="@string/md_paste_from_other_device"/>
                <com.transsion.widgetslistitemlayout.OSListItemView
                    android:id="@+id/item_mirror_gestures"
                    android:tag="binding_7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:lil_corners_angle_type="right"
                    app:lil_open_new_page="false"
                    app:lil_right_layout_type="image"
                    app:lil_show_bottom_divider="true"
                    app:lil_subtitle="@string/md_transfer_tip7"
                    app:lil_title="@string/md_mirror_and_gesture"/>
                <com.transsion.widgetslistitemlayout.OSListItemView
                    android:id="@+id/item_share_call"
                    android:tag="binding_8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:lil_corners_angle_type="right"
                    app:lil_right_layout_type="toggle_switch"
                    app:lil_show_bottom_divider="true"
                    app:lil_subtitle="@string/md_share_call_tip"
                    app:lil_title="@string/md_share_call"/>
                <com.transsion.widgetslistitemlayout.OSListItemView
                    android:id="@+id/item_share_sms"
                    android:tag="binding_9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:lil_corners_angle_type="right"
                    app:lil_right_layout_type="toggle_switch"
                    app:lil_show_bottom_divider="true"
                    app:lil_subtitle="@string/md_share_sms_tip"
                    app:lil_title="@string/md_share_sms"/>
                <com.transsion.widgetslistitemlayout.OSListItemView
                    android:id="@+id/item_share_notifications"
                    android:tag="binding_10"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:lil_corners_angle_type="right"
                    app:lil_right_layout_type="toggle_switch"
                    app:lil_show_bottom_divider="true"
                    app:lil_subtitle="@string/md_transfer_tip5"
                    app:lil_title="@string/md_share_noti"/>
                <com.transsion.widgetslistitemlayout.OSListItemView
                    android:id="@+id/item_share_network"
                    android:tag="binding_11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:lil_corners_angle_type="bottom_corners_round"
                    app:lil_right_layout_type="toggle_switch"
                    app:lil_subtitle="@string/md_transfer_tip6"
                    app:lil_title="@string/md_share_network"/>
                <com.transsion.widgetslistitemlayout.OSListItemView
                    android:id="@+id/item_trust_devices"
                    android:tag="binding_12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="17dp"
                    android:layout_marginBottom="@dimen/os_list_item_title_min_height"
                    app:lil_corners_angle_type="round"
                    app:lil_open_new_page="false"
                    app:lil_right_layout_type="image"
                    app:lil_subtitle="@string/md_trust_subtitle"
                    app:lil_title="@string/md_trust_device2"/>
            </LinearLayout>
        </LinearLayout>
    </com.transsion.widgetslib.view.damping.DampingLayout>
    <com.transsion.widgetsliquid.effect.OSMaskFrameLayout
        android:id="@+id/os_mask_status_bar"
        android:fitsSystemWindows="false"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:os_mask_layer_position="os_mask_layer_position_top"
        app:os_mask_position="os_mask_position_top"/>
    <com.transsion.widgetsliquid.view.OSLiquidToolBar
        android:id="@+id/liquidBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:os_liquid_toolbar_left_icon="@string/os_back"
        app:os_liquid_toolbar_title="@string/md_multi_connect"/>
</FrameLayout>
