<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:tag="layout/activity_copy_paste_0"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.transsion.widgetslib.view.damping.DampingLayout
        android:id="@+id/damping_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:os_damping_mode="normal">
        <LinearLayout
            android:orientation="vertical"
            android:tag="binding_1"
            android:padding="@dimen/setting_item_padding_horizontal_hios"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.transsion.widgetslistitemlayout.OSListItemView
                android:id="@+id/item_copy_paste"
                android:tag="binding_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:lil_corners_angle_type="round"
                app:lil_right_layout_type="toggle_switch"
                app:lil_subtitle="@string/md_transfer_tip"
                app:lil_title="@string/md_paste_from_other_device"/>
            <com.transsion.iotservice.multiscreen.pc.ui.view.RoundedCardView
                android:id="@+id/roundedCardView"
                android:tag="binding_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/os_box_large_radius"
                app:os_smooth_radius="@dimen/os_radius_xxxl"
                app:os_smooth_smoothness="0.6"/>
            <include
                android:id="@+id/copy_paste_item_divide_line"
                android:layout_width="match_parent"
                android:layout_height="@dimen/os_list_item_divide_high"
                layout="@layout/os_list_item_layout_item_long_divide_line"/>
            <com.transsion.widgetslistitemlayout.OSListItemView
                android:id="@+id/item_three_copy"
                android:tag="binding_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:lil_corners_angle_type="bottom_corners_round"
                app:lil_right_layout_type="toggle_switch"
                app:lil_title="@string/md_finger_copy"/>
        </LinearLayout>
    </com.transsion.widgetslib.view.damping.DampingLayout>
    <com.transsion.widgetsliquid.effect.OSMaskFrameLayout
        android:id="@+id/os_mask_status_bar"
        android:fitsSystemWindows="false"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:os_mask_layer_position="os_mask_layer_position_top"
        app:os_mask_position="os_mask_position_top"/>
    <com.transsion.widgetsliquid.view.OSLiquidToolBar
        android:id="@+id/liquidBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:os_liquid_toolbar_left_icon="@string/os_back"
        app:os_liquid_toolbar_title="@string/md_paste_from_other_device"/>
</FrameLayout>
