<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <FrameLayout
        android:id="@+id/fl_item_vp_lottie"
        android:layout_width="match_parent"
        android:layout_height="280dp">
        <com.airbnb.lottie.LottieAnimationView
            android:layout_gravity="center"
            android:id="@+id/iv_item_vp_lottie"
            android:layout_width="@dimen/setting_lottie_width"
            android:layout_height="@dimen/setting_lottie_height"
            android:scaleType="centerInside"
            android:adjustViewBounds="true"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"/>
    </FrameLayout>
    <FrameLayout
        android:id="@+id/titleFrame"
        android:paddingBottom="1dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_below="@+id/fl_item_vp_lottie"
        android:layout_marginStart="@dimen/setting_lottie_description_margin_start_end"
        android:layout_marginEnd="@dimen/setting_lottie_description_margin_start_end">
        <TextView
            android:textSize="16sp"
            android:textColor="@color/module_pc_setting_lottie_title"
            android:gravity="center"
            android:id="@+id/tv_item_vp_title"
            android:paddingBottom="@dimen/setting_titles_padding_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/module_pc_phone_mirroe"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            style="@style/text_roboto_style_regular2"/>
        <TextView
            android:textSize="16sp"
            android:gravity="center"
            android:visibility="invisible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/module_pc_free_stream"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"/>
    </FrameLayout>
    <FrameLayout
        android:id="@+id/desFrame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:layout_below="@+id/titleFrame"
        android:layout_marginStart="@dimen/setting_lottie_description_margin_start_end"
        android:layout_marginEnd="@dimen/setting_lottie_description_margin_start_end">
        <TextView
            android:textSize="14sp"
            android:textColor="@color/module_pc_primary_content_40"
            android:gravity="center"
            android:id="@+id/tv_item_vp_des"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/module_pc_you_can_also_play"
            android:lineSpacingMultiplier="1.2"/>
        <TextView
            android:textSize="14sp"
            android:gravity="center"
            android:visibility="invisible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/module_pc_you_can_transfer"
            android:lineSpacingMultiplier="1.2"/>
    </FrameLayout>
</RelativeLayout>
