<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:tag="layout/activity_gesture_0"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.transsion.widgetslib.view.damping.DampingLayout
        android:id="@+id/damping_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="false"
        app:os_damping_mode="normal">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:tag="binding_1"
            android:padding="@dimen/setting_item_padding_horizontal_hios"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.transsion.iotservice.multiscreen.pc.ui.view.RoundedCardView
                android:id="@+id/mirrorGestureCardView"
                android:tag="binding_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:os_smooth_radius="@dimen/os_radius_xxxl"
                app:os_smooth_smoothness="0.6"/>
            <include
                android:id="@+id/mirror_gesture_divide_line"
                android:layout_width="match_parent"
                android:layout_height="@dimen/os_list_item_divide_high"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mirrorGestureCardView"
                layout="@layout/os_list_item_layout_item_long_divide_line"/>
            <com.transsion.widgetslistitemlayout.OSListItemView
                android:id="@+id/item_mirror_gesture"
                android:tag="binding_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mirror_gesture_divide_line"
                app:lil_corners_angle_type="bottom_corners_round"
                app:lil_right_layout_type="toggle_switch"
                app:lil_title="@string/module_pc_gesture_switch_title"/>
            <com.transsion.iotservice.multiscreen.pc.ui.view.RoundedCardView
                android:id="@+id/airTransferCardView"
                android:tag="binding_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/os_box_large_radius"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/item_mirror_gesture"
                app:os_smooth_radius="@dimen/os_radius_xxxl"
                app:os_smooth_smoothness="0.6"/>
            <include
                android:id="@+id/airTransfer_gesture_item_divide_line"
                android:layout_width="match_parent"
                android:layout_height="@dimen/os_list_item_divide_high"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/airTransferCardView"
                layout="@layout/os_list_item_layout_item_long_divide_line"/>
            <com.transsion.widgetslistitemlayout.OSListItemView
                android:id="@+id/item_three_finger_fast"
                android:tag="binding_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/os_dialog_title_padding_end"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/airTransfer_gesture_item_divide_line"
                app:lil_corners_angle_type="bottom_corners_round"
                app:lil_right_layout_type="toggle_switch"
                app:lil_title="@string/three_finger_fast_transfer"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.transsion.widgetslib.view.damping.DampingLayout>
    <com.transsion.widgetsliquid.effect.OSMaskFrameLayout
        android:id="@+id/os_mask_status_bar"
        android:fitsSystemWindows="false"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:os_mask_layer_position="os_mask_layer_position_top"
        app:os_mask_position="os_mask_position_top"/>
    <com.transsion.widgetsliquid.view.OSLiquidToolBar
        android:layout_gravity="top"
        android:id="@+id/liquidBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:os_liquid_toolbar_left_icon="@string/os_back"
        app:os_liquid_toolbar_title="@string/md_mirror_and_gesture"/>
</FrameLayout>
